unwanted horizontal scroll, fixed

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body{
     padding: min(1.5rem, 4%);
     height: 100vh;
     width: 100vw;
+    overflow-x: hidden;
 }
 
 .country-name{
